--- a/index.html
+++ b/index.html
@@ -42,6 +42,14 @@
           <a href="#" class="btn">Let's get in touch </a>
         </div>
       </div>
+      <div class="home-sci">
+        <a href="#"><i class="bx bxl-facebook"></i></a>
+        <a href="#"><i class="bx bxl-twitter"></i></a>
+        <a href="#"><i class="bx bxl-linkedin"></i></a>
+      </div>
+    </section>
+    <section class="about" id="">
+      <h2 class="heading">About<span>Me</span></h2>
     </section>
     <script src="script.js"></script>
   </body>
