--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="home-content">
         <h1>Hey, I am <span>Chris Oprisiu</span></h1>
         <div class="text-animate">
-          <h3>Frontend Developer</h3>
+          <h3>Web Application Developer</h3>
         </div>
         <p>
           As a web developer, I am a digital architect and problem solver,
