--- a/index.html
+++ b/index.html
@@ -50,7 +50,15 @@
     </section>
     <section class="about" id="">
       <h2 class="heading">About<span>Me</span></h2>
+
+      <div class="about-content">
+        <h3>Frontend Developer</h3>
+      <div class=""btn-box btns">
+      <a href="#" class="btn">Read more</a>
+    </div>
+      </div>
     </section>
+
     <script src="script.js"></script>
   </body>
 </html>
